# openbook-protocol

./: .env.example  .gitignore  Anchor.toml  BUILD_STATUS.md  GENESIS_SIGNATURE.txt  IDENTITY_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  QUESTIONNAIRE.md  QUESTIONNAIRE_SUGGESTED.md  README.md  SESSION_IMPROVEMENTS_SUMMARY.md  SOLANA_GRANT_APPLICATION.md  START_HERE_NEXT_STEPS.md  docker-compose.yml
docs/: 00_START_HERE.md  01_OPENBOOK_VISION.md  02_OPENBOOK_PRINCIPLES.md  03_SCOPE_DECISIONS.md  04_DOMAIN_MODEL.md  05_STATE_MACHINES.md  06_MECHANISM_DESIGN.md  07_CHAIN_SOLANA.md  08_PROGRAMS_SPEC.md  09_EVENTS_SCHEMA.md  10_INDEXER_SPEC.md  11_API_SPEC.md  12_DISCOVERY_RANKING.md  13_KYC_ATTESTATION.md  14_SECURITY_THREAT_MODEL.md  15_DEVOPS_DEPLOYMENT.md  16_ROADMAP.md  17_OPEN_QUESTIONS.md  OPERATOR_GUIDE.md
programs/: ACCESS_CONTROL.md  ACCOUNT_SIZE_OPTIMIZATION.md  ERROR_MESSAGES.md  README.md  UPGRADE_GUIDE.md
programs/budget-vote/: Cargo.toml
programs/budget-vote/src/: lib.rs  state.rs  weighted_median.rs
programs/budget-vote/tests/: weighted_median_tests.rs
programs/campaign-registry/: Cargo.toml
programs/campaign-registry/src/: error.rs  events.rs  lib.rs
programs/campaign-registry/src/instructions/: archive_campaign.rs  create_campaign.rs  increment_task_count.rs  mod.rs  publish_campaign.rs  update_campaign.rs
programs/campaign-registry/src/state/: campaign.rs
programs/campaign-registry/tests/: integration.rs
programs/dispute-module/: Cargo.toml
programs/dispute-module/src/: lib.rs  lib_with_access_control.rs
programs/governance-token/: Cargo.toml
programs/governance-token/src/: lib.rs
programs/proof-registry/: Cargo.toml
programs/proof-registry/src/: lib.rs
programs/task-escrow/: Cargo.toml
programs/task-escrow/src/: lib.rs  state.rs
programs/task-manager/: Cargo.toml
programs/task-manager/src/: error.rs  events.rs  lib.rs
programs/task-manager/src/state/: task.rs
services/api/: .env.example  Dockerfile  README.md  package.json
services/api/src/: index.ts
services/indexer/: .env.example  Dockerfile  README.md  package.json
services/indexer/src/: config.ts  index.ts
web/: .env.example  Dockerfile  README.md  next.config.js  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: CampaignCard.tsx  ContributeButton.tsx  CopyableAddress.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  Navigation.tsx  SearchBar.tsx  SkeletonCard.tsx  TaskCard.tsx
web/src/lib/: api.ts  utils.ts
(+17 files in other folders)
