[package]
name = "budget-vote"
version = "0.1.0"
description = "OpenBook Budget Vote - Weighted median budget discovery with anti-Sybil measures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "budget_vote"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
