[package]
name = "campaign-registry"
version = "0.1.0"
description = "OpenBook Campaign Registry - Campaign creation and lifecycle management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "campaign_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
